add dish details component, card and list

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,24 +1,4 @@
-<div fxFlex *ngIf="selectedDish">
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>
-        <h3>{{selectedDish.name | uppercase}}</h3>
-      </mat-card-title>
-    </mat-card-header>
-    <img matCardImage src={{selectedDish.image}} alt={{selectedDish.name}}>
-    <mat-card-content>
-      <p>{{selectedDish.description}}
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button matButton>LIKE</button>
-      <button matButton>SHARE</button>
-    </mat-card-actions>
-  </mat-card>
-</div>
-
-
-<!-- <div class="container"
+<div class="container"
      fxLayout="column"
      fxLayoutGap="10px">
 
@@ -32,4 +12,6 @@
   </mat-list-item>
 </mat-list>
 
-</div> -->
+</div>
+
+<app-dishdetail></app-dishdetail>
