--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,9 +10,7 @@
   </mat-list>
 </div> -->
 
-<div class="container"
-     fxLayout="column"
-     fxLayoutGap="10px">
+<div class="container" fxLayout="column" fxLayoutGap="10px">
 
   <div fxFlex>
     <div>
@@ -23,7 +21,7 @@
 
   <div fxFlex>
     <mat-grid-list cols="2" rowHeight="200px">
-      <mat-grid-tile *ngFor="let dish of dishes" (click) = "onSelect(dish)">
+      <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
         <img height="200px" src={{dish.image}} alt={{dish.name}}>
         <mat-grid-tile-footer>
           <h1 matLine>{{dish.name | uppercase}}</h1>
@@ -33,5 +31,3 @@
   </div>
 
 </div>
-
-<app-dishdetail [dish] = "selectedDish"></app-dishdetail>
